# swing-X

./: .env.example  .gitignore  .mcp.json  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: python.yml  rust.yml  web.yml
apps/web/: .env.example  .prettierignore  eslint.config.js  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest-setup-client.ts
apps/web/e2e/: scoreboard.spec.ts
apps/web/src/: app.css  app.html
apps/web/src/lib/: date-range.test.ts  date-range.ts  format.test.ts  format.ts  nav.ts
apps/web/src/lib/api/: client.live.test.ts  client.test.ts  client.ts  schemas.ts
apps/web/src/lib/components/: Badge.svelte  ConvictionBar.svelte  ConvictionBar.svelte.test.ts  DataTable.svelte  DateRangePicker.svelte  GatePill.svelte  GatePill.svelte.test.ts  JournalView.svelte  JsonInspector.svelte  Metric.svelte  PageHeader.svelte  PopulationView.svelte  ScoreboardView.svelte  SignalChart.svelte  WhyPanel.svelte  data-table.ts
apps/web/src/lib/fixtures/: candles.ts  changelog.ts  journal.ts  monitor.ts  population.ts  signals.ts
apps/web/src/lib/ui/: theme.ts
apps/web/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.ts
apps/web/src/routes/changelog/: +page.svelte  +page.ts
apps/web/src/routes/equity/: +page.svelte  +page.ts
apps/web/src/routes/equity/journal/: +page.svelte  +page.ts
apps/web/src/routes/equity/population/: +page.svelte  +page.ts
apps/web/src/routes/journal/: +page.svelte  +page.ts
apps/web/src/routes/monitor/: +page.svelte  +page.ts
apps/web/src/routes/population/: +page.svelte  +page.ts
apps/web/src/routes/scoreboard/: +page.svelte  +page.ts
apps/web/src/routes/signals/[id]/: +page.svelte  +page.ts
crates/se-api/: Cargo.toml
crates/se-api/src/: dto.rs  lib.rs  main.rs  queries.rs  stream.rs
crates/se-api/tests/: smoke.rs
crates/se-cli/: Cargo.toml
crates/se-cli/src/: ingest.rs  leak_test.rs  lib.rs  main.rs  nightly.rs  sanity.rs  search_cmd.rs  signals_cmd.rs  test_era.rs  trades.rs
crates/se-config/: Cargo.toml
crates/se-config/src/: lib.rs
crates/se-core/: Cargo.toml
crates/se-core/src/: error.rs  feature.rs  horizon.rs  ids.rs  layer.rs  lib.rs  regime.rs  risk.rs  scanner.rs  signal.rs  strategy.rs  ticker.rs  time.rs
crates/se-features/: Cargo.toml
crates/se-features/src/: event_overlay.rs  indicators.rs  layer0_tradeability.rs  layer1_regime.rs  layer2_location.rs  layer3_trigger.rs  lib.rs  module.rs
crates/se-features/tests/: p3_layers.rs
crates/se-journal/: Cargo.toml
crates/se-journal/src/: fills.rs  lib.rs
crates/se-journal/tests/: resolve.rs
crates/se-labeler/: Cargo.toml
crates/se-labeler/src/: assemble.rs  lib.rs  triple_barrier.rs
crates/se-mlclient/: Cargo.toml
crates/se-mlclient/src/: client.rs  contract.rs  dataset.rs  error.rs  lib.rs
crates/se-monitor/: Cargo.toml
crates/se-monitor/src/: detectors.rs  lib.rs
crates/se-orchestrator/: Cargo.toml
crates/se-orchestrator/src/: lib.rs
crates/se-provider/: Cargo.toml
crates/se-provider/src/: fmp.rs  fred.rs  http_util.rs  lib.rs  mock.rs  proprietary.rs  provider.rs  types.rs
crates/se-provider/tests/: fmp_live.rs
crates/se-regime/: Cargo.toml
crates/se-regime/src/: classifier.rs  engine.rs  lib.rs
crates/se-search/: Cargo.toml
crates/se-search/src/: backtest.rs  feature_matrix.rs  genome_ops.rs  lib.rs  persist.rs  population.rs  risk_search.rs  rng.rs  score.rs  seed.rs
crates/se-search/tests/: p8_horizon.rs
crates/se-signal/: Cargo.toml
crates/se-signal/src/: conviction.rs  lib.rs
crates/se-store/: Cargo.toml
crates/se-store/src/: lib.rs  models.rs  pit.rs  store.rs
crates/se-store/tests/: macro_pit.rs  pit_leakage.rs
crates/se-validation/: Cargo.toml
crates/se-validation/src/: fixtures.rs  gate.rs  harness.rs  lib.rs
crates/se-validation/tests/: p4_checkpoint.rs
docs/: ARCHITECTURE.md  ML_AUDIT_ROADMAP.md  PHASES.md
docs/adr/: 0001-runtime-sql-vs-compile-checked-queries.md
migrations/: 0001_init.sql  0002_macro.sql  0003_backtest_mode.sql  0004_scanner.sql  0005_earnings.sql  0006_precision.sql  0007_forward_holdout.sql  0008_test_era_scores.sql
ml-worker/: README.md  pyproject.toml
ml-worker/src/se_ml/: __init__.py  config.py  contract.py  gates.py  io_arrow.py  server.py
ml-worker/src/se_ml/calibration/: __init__.py  calibrate.py
ml-worker/src/se_ml/cv/: __init__.py  cpcv.py
ml-worker/src/se_ml/importance/: __init__.py  shap_perm.py
ml-worker/src/se_ml/labeling/: __init__.py  meta_labeling.py  triple_barrier.py  uniqueness.py
ml-worker/src/se_ml/models/: __init__.py  gbm.py
ml-worker/src/se_ml/stats/: __init__.py  dsr.py  metrics.py  pbo.py
ml-worker/tests/: fixtures.py  test_calibration.py  test_cpcv.py  test_dsr.py  test_gates.py  test_leakage_fixture.py  test_meta_labeling.py  test_path_averaging.py  test_pbo.py  test_precision_threshold.py  test_triple_barrier.py  test_uniqueness.py
scripts/: db-up.sh
