[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "UNLICENSED"
publish = false

# Centralized dependency versions. Crates opt in with `dep = { workspace = true }`.
# Versions are conservative-but-current majors/minors that compile cleanly; bump as needed.
[workspace.dependencies]
# async runtime / web
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full"] }
hyper = "1"

# db
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio", "tls-rustls", "postgres", "chrono", "rust_decimal", "uuid", "json", "macros", "migrate",
] }

# serialization / http client
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# errors / logging / config
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
figment = { version = "0.10", features = ["toml", "env"] }

# domain primitives
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# numerics
ndarray = "0.16"

# scheduling
apalis = { version = "0.6", features = ["limit"] }
apalis-cron = "0.6"

# cli
clap = { version = "4", features = ["derive", "env"] }

# arrow/parquet handoff to python
arrow = "53"
parquet = "53"

# testing
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
