[project]
name = "se-ml"
version = "0.1.0"
description = "Python ML sidecar (se_ml) for the swing-X self-learning swing-trading engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "shap>=0.45",
    "pyarrow>=16.0",
    # shap depends on numba; pin floors that ship cp311 wheels so the resolver does not
    # backtrack to an ancient numba/llvmlite that refuses to build on Python 3.11.
    "numba>=0.59",
    "llvmlite>=0.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/se_ml"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N", "C4", "SIM"]
ignore = ["N803", "N806"]  # allow math-style ABC variable/argument names

[tool.ruff.lint.per-file-ignores]
# Tests assert exact branches; allow plain asserts and intentional ValueError flows.
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["se_ml"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # scipy emits this for the deliberate near-constant-array edge-case test in test_dsr.
    "ignore:Precision loss occurred in moment calculation:RuntimeWarning",
    # starlette/httpx testclient deprecation is environmental, not our code.
    "ignore::DeprecationWarning:starlette.*",
]
