[package]
name = "se-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "se"
path = "src/main.rs"

[dependencies]
se-core = { path = "../se-core" }
se-config = { path = "../se-config" }
se-store = { path = "../se-store" }
se-provider = { path = "../se-provider" }
se-features = { path = "../se-features" }
se-regime = { path = "../se-regime" }
se-mlclient = { path = "../se-mlclient" }
se-validation = { path = "../se-validation" }
se-search = { path = "../se-search" }
se-signal = { path = "../se-signal" }
se-journal = { path = "../se-journal" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
