[package]
name = "se-labeler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
se-core = { path = "../se-core" }
se-mlclient = { path = "../se-mlclient" }
chrono = { workspace = true }
serde = { workspace = true }
