[package]
name = "se-signal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
se-core = { path = "../se-core" }
se-store = { path = "../se-store" }
se-features = { path = "../se-features" }
se-regime = { path = "../se-regime" }
se-provider = { path = "../se-provider" }
se-search = { path = "../se-search" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
