[package]
name = "se-validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
se-core = { path = "../se-core" }
se-mlclient = { path = "../se-mlclient" }
se-labeler = { path = "../se-labeler" }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
